# Qt_MultiThread_Method

Concurrent/: CMakeLists.txt  README.md  main.cpp
threadpool/: .gitignore  CMakeLists.txt  Job.cpp  Job.h  JobManager.cpp  JobManager.h  JobResult.h  dialog.cpp  dialog.h  dialog.ui  main.cpp
threadpool_single/: CMakeLists.txt  main.cpp
